--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prácticas de FHiC - [Nombre del proyecto web]</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
+  <title>Prácticas de FHiC - [Nombre del proyecto web]</title>
+  
 </head>
 <body>
   <header>
@@ -19,8 +22,10 @@
   <h2 class="titleWeb">Web del Grup B3</h2>
 
   <div id="mainView">
-    <nav>  
-      <ul> <h3 class="ApartadoTitle"><a  href="miembros.html">Miembros</a></h3>
+   
+    <aside>
+      <ul> 
+        <h3 class="ApartadoTitle"><a  href="miembros.html">Miembros</a></h3>
         <li class="names">Zixin Zhang</li>
         <img src="img/xin.png" alt="Zixin Zhang" class="rounded-image">
         <li class="names">Zhehan Xiang</li>
@@ -29,22 +34,26 @@
         <img src="img/chen.png" alt="Chen" class="rounded-image">
         <li class="names">William Sotto</li>
         <img src="img/william.png" alt="Will" class="rounded-image">
-        
       </ul>
-    </nav>
+    </aside>
+  
+  
     <article>
       <h3 class="ApartadoTitle">Información del Proyecto</h3>
       <p class="Welcome">¡Bienvenidos a la página web del grupo B3! Aquí encontrarás todo lo que necesitas para introducirte en el apasionante mundo de la programación. Desde los fundamentos de los lenguajes de programación hasta el uso avanzado de plataformas como GitHub y otras herramientas esenciales en el desarrollo de software. 
         Explora nuestra web para descubrir recursos, tutoriales y consejos que te ayudarán a dar tus primeros pasos en este emocionante campo. ¡No te pierdas la oportunidad de aprender y crecer con nosotros!.</p>
       <img src="img/prog.jpg" alt="Will" class="InformationImage">
     </article>
+
+
     <aside>
       <section>
         <h3 class="ApartadoTitle" >Contacto</h3>
         <p>Si tienes alguna opinión o sugerencia sobre nuestro proyecto web, contáctanos <a href="contacto.html">aquí</a>.</p>
         <p>El archivo contacto.html contiene un enlace a principiosD.html donde se explican los principios de diseño que se han aplicado en el diseño del formulario.</p>
       </section>
-    </aside>      
+    </aside>
+      
   </div>
   
   <footer>
@@ -52,4 +61,8 @@
   </footer>
   
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </html>
